--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal website</title>
      <link rel="stylesheet" href="index.css">
-     <link rel="stylesheet" href="/signup_page.html">
+     <link rel="stylesheet" href="/signup.html">
     <script src="https://kit.fontawesome.com/bd54c1576a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -17,7 +17,7 @@
     <div class="navbar">
         <h1 id="logo_main_web"><i class="fa-solid fa-house"></i>Basanta</h1> 
             <a href="#home">Home</a>
-            <a href="signup_page.html">Sign Up</a>
+            <a href="signup.html">Sign Up</a>
             <a href="#aboutus">About</a>
     </div>
     <div class="searchbar">
