--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
         </p>
     </div>  
 </section>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQBZRFSWFK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-DQBZRFSWFK');
+</script>
 <section id="lastpage">
     <div class="last_page_box">
         <div>
