--- a/signup.html
+++ b/signup.html
@@ -48,5 +48,14 @@
         </div>
         <form>          
         </div> 
+            <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DQBZRFSWFK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DQBZRFSWFK');
+</script>
 </body>
 </html>
